Dependency injection implemented with Tsyringe
